# rt_practice

./: README.md  compose.yaml
grader/: Cargo.toml  Dockerfile
grader/src/: main.rs
nextjs-prisma/: package.json  pnpm-lock.yaml
nextjs-prisma/prisma/: schema.prisma
nextjs-prisma/prisma/migrations/20250629010347_init/: migration.sql
nextjs-prisma/prisma/migrations/20250701123500_add_trigger/: migration.sql
nextjs-prisma/src/app/: globals.css  layout.tsx  page.tsx
nextjs-prisma/src/app/api/quotes/: route.ts
nextjs-prisma/src/app/api/quotes/[id]/: route.ts
nextjs-prisma/src/app/quote/[quoteId]/: page.tsx
nextjs-prisma/src/components/: QuoteCard.tsx  QuoteForm.tsx  QuoteScore.tsx  QuotesList.tsx
nextjs-prisma/src/lib/: responses.ts  schema.ts
rt/: Cargo.toml  Dockerfile
rt/src/: main.rs
