[package]
name = "grader"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
futures = "0.3.31"
lapin = "3.0.2"
log = "0.4.27"
postgres-types = { version = "0.2.9", features = ["derive"] }
pretty_env_logger = "0.5.0"
rand = "0.9.2"
serde = "1.0.219"
serde_json = "1.0.141"
tokio = { version = "1.47.0", features = ["full"] }
tokio-postgres = "0.7.13"
