[package]
name = "rt"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
dashmap = "6.1.0"
futures = "0.3.31"
lapin = "3.0.2"
log = "0.4.27"
pretty_env_logger = "0.5.0"
serde = "1.0.219"
serde_json = "1.0.141"
tokio = { version = "1.47.0", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors"] }
